--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="main__decor">
               <div class="main__image">
-                <img src="./imgForSite/main.jpg" alt="clock" />
+                <img src="./imgForSite/main2.jpg" alt="clock" />
                 <div class="second__buttefly">
                   <img src="./img/Butterfly.svg" alt="" />
                 </div>
@@ -125,7 +125,7 @@
                       </p>
                     </div>
                     <div class="reviews__title title">
-                      <span>Будильник</span>
+                      <span>Часи</span>
                     </div>
                   </div>
                 </div>
@@ -195,16 +195,18 @@
           <div class="favorite__conteiner">
             <div class="favorite__body">
               <h2 class="favorite__title title">
-                Browse and buy your <span>best generator</span> with V.I.D
-                Trading.
+                Заповніть данні і ми зв'яжемося з Вами протягом
+                <span> 15 хвилин</span>
+                для підтвердження замовлення.
               </h2>
               <div class="favorite__apps apps-favorite">
-                <a href="" class="apps-favorite__item">
-                  <img src="./img/favorite/f2google.jpg" alt="" />
-                </a>
-                <a href="" class="apps-favorite__item">
-                  <img src="./img/favorite/f3appstore.jpg" alt="" />
-                </a>
+                <iframe
+                  src="https://www.youtube.com/embed/_BIbCiN7NgQ?si=zCNFn0l1IY0DKzvc"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen
+                ></iframe>
               </div>
             </div>
             <div class="favorite__images">
