--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
                 ></iframe>
               </div>
             </div>
-            <div class="favorite__images">
-              <img src="./img/favorite/f1.jpg" alt="" />
+            <div class="form__main">
+              <form action=""></form>
             </div>
           </div>
         </section>
