--- a/index.html
+++ b/index.html
@@ -209,9 +209,7 @@
                 ></iframe>
               </div>
             </div>
-            <div class="form__main">
-              <form action=""></form>
-            </div>
+            <div class="form__main"></div>
           </div>
         </section>
       </main>
