--- a/index.html
+++ b/index.html
@@ -209,7 +209,59 @@
                 ></iframe>
               </div>
             </div>
-            <div class="form__main"></div>
+            <div class="form__main">
+              <form action="" class="form__body">
+                <h3>Додайте данні для замовлення</h3>
+                <br />
+                <div>
+                  <input
+                    type="text"
+                    name="nameSurname"
+                    placeholder="Ваше ім'я та Призвіще"
+                  />
+                </div>
+                <br />
+                <div>
+                  <input type="text" name="City" placeholder="Місто" />
+                </div>
+                <br />
+                <div>
+                  <input
+                    type="tel"
+                    name="userphone"
+                    placeholder="Ваш телефон"
+                    id="phone"
+                  />
+                </div>
+                <br />
+                <div>
+                  <input
+                    type="number"
+                    name="novaposhta"
+                    placeholder="№ Нової Пошти"
+                  />
+                </div>
+                <br />
+                <div>
+                  <p>Кількість</p>
+                  <select name="value" id="">
+                    <option selected value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                  </select>
+                </div>
+                <div>
+                  <button type="submit">Замовити</button>
+                </div>
+              </form>
+            </div>
           </div>
         </section>
       </main>
@@ -293,6 +345,7 @@
         </div>
       </footer>
     </div>
+    <script src="https://unpkg.com/imask"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
