--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
           <nav class="header__menu menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Про Часи</a>
+                <a href="#" class="menu__link scroll__clock">Про Часи</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link scroll-menu__link"
+                <a href="#" class="menu__link scroll-menu__link scroll__Why"
                   >Наші переваги</a
                 >
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Як Замовити</a>
+                <a href="#" class="menu__link scroll__buy">Як Замовити</a>
               </li>
             </ul>
           </nav>
@@ -210,7 +210,7 @@
               </div>
             </div>
             <div class="form__main">
-              <form action="" class="form__body">
+              <form action="telegram.php" method="post" class="form__body">
                 <h3>Додайте данні для замовлення</h3>
                 <br />
                 <div class="form__blocks">
