--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
                     id="success"
                     class="alert alert-success"
                     role="alert"
+                    style="display: none"
                   ></div>
                 </div>
               </form>
