creat med video

--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
                 </div>
               </div>
             </div>
+            <div class="full-screen">
+              <div class="full-screen__body">
+                <div class="full-screen__tittle">
+                  G-SMART LIGHT SOUND MACHINE
+                </div>
+                <div class="full-screen__text">
+                  Найкращій подарунок собі або друзям!
+                </div>
+              </div>
+              <video
+                autoplay
+                muted
+                loop
+                preload="auto"
+                class="full-screen__video"
+              >
+                <source type="video/mp4" src="./video/main.mp4" />
+              </video>
+            </div>
           </div>
         </section>
 
