--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <nav class="header__menu menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link scroll__clock">Про Часи</a>
+                <a href="#" class="menu__link scroll__clock">Про Годинник</a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link scroll-menu__link scroll__Why"
@@ -44,14 +44,17 @@
           <div class="main__conteiner">
             <div class="main__content">
               <h1 class="main__title">
-                Придбайте легко та швидко <span>Часи</span> онлайн
+                Придбайте легко та швидко <span>Годинник</span> онлайн
               </h1>
               <p class="main__text">
-                Часи "G-SMART LIGHT SOUND MACHINE! " - Найкращій подарунок собі
-                або друзям!
+                Годинник "G-SMART LIGHT SOUND MACHINE! " - Найкращій подарунок
+                собі або друзям!
               </p>
               <div class="main__actions actions-main">
                 <a href="#" class="actions-main__button">Придбати</a>
+              </div>
+              <div class="main__actions actions-main">
+                <p href="#" class="cost">Ціна 1200 грн.</p>
               </div>
             </div>
             <div class="main__decor">
@@ -86,7 +89,7 @@
 
         <section class="page__reviews reviews">
           <div class="reviews__conteiner">
-            <h2 class="reviews__title title">Про <span>Часи</span></h2>
+            <h2 class="reviews__title title">Про <span>годинник</span></h2>
             <div class="reviews__swiper swiper-reviews swiper">
               <!-- Additional required wrapper -->
               <div class="swiper-reviews__wrapper swiper-wrapper">
@@ -144,7 +147,7 @@
                       </p>
                     </div>
                     <div class="reviews__title title">
-                      <span>Часи</span>
+                      <span>Годинник</span>
                     </div>
                   </div>
                 </div>
@@ -289,6 +292,7 @@
                   <div class="button__block">
                     <button type="submit">Замовити</button>
                   </div>
+
                   <div
                     id="success"
                     class="alert alert-success"
@@ -297,6 +301,12 @@
                   ></div>
                 </div>
               </form>
+              <div class="form__price">
+                <div class="form__price-standard">Ціна 1200 грн.</div>
+                <div class="form__price-total">
+                  Загальна вартість: <span>1200 грн. </span>
+                </div>
+              </div>
             </div>
           </div>
         </section>
