--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 >
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link scroll__buy">Як Замовити</a>
+                <a href="#" class="menu__link scroll__buy">Повна інформація</a>
               </li>
             </ul>
           </nav>
@@ -307,6 +307,42 @@
                   Загальна вартість: <span>1200 грн. </span>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="page__feature feature">
+          <div class="feature__conteiner">
+            <h2 class="reviews__title feature-title" ><span>Характеристики</span> </h2>
+            <div class="feature__body">
+              <div><img src="./imgForSite/Harakteristiki.webp" alt=""></div>
+              <div class="informations">
+                <div class="information__block-main">Тип питания	</div>
+                <div class="information__block-text">Сеть 220 В</div>
+                <div class="information__block-main">Поддерживаемые беспроводные интерфейсы	</div>
+                <div class="information__block-text">Bluetooth</div>
+                <div class="information__block-main">Вес	</div>
+                <div class="information__block-text">450 г</div>
+                <div class="information__block-main">Вид оборудования	</div>
+                <div class="information__block-text">LED-дисплей</div>
+                <div class="information__block-main">Подключение	</div>
+                <div class="information__block-text">Проводное</div>
+                <div class="information__block-main">Дополнительные характеристики	</div>
+                <div class="information__block-text text-infomrations"> - портативная колонка;<br>
+                    - будильник;<br>
+                    - имитация света солнца для пробуждения;<br>
+                    - 16 миллионов цветов света + 256 режимов освещения;<br>
+                    - цветовые темы можно изменять в соответствии с воспроизводимой музыкой (элемент конфигурации);<br>
+                    - беспроводная зарядка для всех типов телефонов с беспроводным оборудованием QI;<br>
+                    - кнопочное управление;<br>
+                    - управление через приложение;<br>
+                    - беспроводное зарядное устройство 15 Вт;<br>
+                    - адаптер (12 В/2,5 А) (в комплекте нет)<br>
+                    - Bluetooth 5.0;<br>
+                    -яркость, регулируемая 0-100%;<br>
+                    - яркость: 2800 – 6500К;<br>
+                    - микрофон для ответа на звонки</div>
+              </div>
+            </div>
             </div>
           </div>
         </section>
