--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               <div class="form__price">
                 <div class="form__price-standard">Ціна 1200 грн.</div>
                 <div class="form__price-total">
-                  Загальна вартість: <span class="value-price">1200</span>
+                  Загальна вартість: <span class="value-price"> 1200 грн.</span>
                 </div>
               </div>
             </div>
