--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             </div>
           </div>
         </section>
+        <div class="cost__mobile__conteiner ">
+          <p href="#" class="cost__mobile-display">Вартість 1200 грн.</p>
+        </div>
 
         <section class="page__reviews reviews">
           <div class="reviews__conteiner">
@@ -343,7 +346,7 @@
             </div>
             </div>
           </div>
-        </section>
+        </section>     
       </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
