--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
                     id="success"
                     class="alert alert-success"
                     role="alert"
-                    style="display: none"
-                  ></div>
+                    
+                  > <span>Будь ласка, заповніть ВСІ поля!</span></div>
               </form>
               <div class="form__price">
                 <div class="form__price-standard">Ціна 1200 грн.</div>
